--- a/innovation_hub/webstore/templates/home.html
+++ b/innovation_hub/webstore/templates/home.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     />
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
   </head>
   <body>
     <!-- header -->
@@ -38,8 +39,8 @@
               </div>
             </div>
             <div class="hero-btns">
-              <a href="shop.html" class="boxed-btn">Art Collection</a>
-              <a href="contact.html" class="bordered-btn">Work With Us</a>
+              <a href="{% url 'webstore:shop' %}" class="boxed-btn">Art Collection</a>
+              <a href="{% url 'webstore:contact' %}" class="bordered-btn">Work With Us</a>
             </div>
           </div>
         </div>
@@ -58,7 +59,7 @@
               </div>
               <div class="service-content">
                 <h4>High Quality</h4>
-                <p>crafter from top recycled materials</p>
+                <p>crafted from top recycled materials</p>
               </div>
             </div>
             <div class="service">
@@ -115,9 +116,7 @@
               <h3>Flowerpot</h3>
               <p>Per Piece</p>
               <p class="product-price">$5</p>
-              <a href="" class="cart-icon"
-                ><i class="fas fa-shopping-cart"></i> Add to Cart</a
-              >
+              <a href="" class="cart-icon"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
             </div>
           </div>
           <div class="product-block">
@@ -130,9 +129,7 @@
               <h3>Necklace</h3>
               <p>Per Piece</p>
               <p class="product-price">$15</p>
-              <a href="" class="cart-icon"
-                ><i class="fas fa-shopping-cart"></i> Add to Cart</a
-              >
+              <a href="" class="cart-icon"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
             </div>
           </div>
           <div class="product-block">
@@ -145,15 +142,13 @@
               <h3>Decorative Bottle</h3>
               <p>Per Piece</p>
               <p class="product-price">$15</p>
-              <a href="" class="cart-icon"
-                ><i class="fas fa-shopping-cart"></i> Add to Cart</a
-              >
+              <a href="" class="cart-icon"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="show-more">
-            <a href="#">show more</a>
+            <a href="{% url 'webstore:shop' %}">show more</a>
           </div>
         </div>
       </div>
@@ -321,11 +316,36 @@
     <script>
         window.addEventListener("scroll", function() {
             let navbar = document.querySelector(".top-header-area");
-            if (window.scrollY > 30) {  // Adjust this value based on when you want the effect to happen
+            if (window.scrollY > 30) {
                 navbar.style.backgroundColor = "rgba(7, 33, 46, 0.98)";  // Dark transparent background
             } else {
                 navbar.style.backgroundColor = "transparent";
             }
+        });
+
+        $(document).on('click', '#add-to-cart', function(e) {
+          e.preventDefault();
+          let productId = $(this).val();
+
+          $.ajax({
+            type: 'POST',
+            url: '{% url 'cart_add' %}',
+            data: {
+              product_id: productId,
+              csrfmiddlewaretoken: '{{ csrf_token }}',
+              action: 'post'
+            },
+            success: function(json) {
+              console.log("Cart Quantity Updated:", json.qty);  // Debug the response
+
+              // Update cart quantity on screen
+              $('#cart_quantity').text(json.qty);
+              // document.getElementById('cart_quantity').textContent = json.qty;
+            },
+            error: function(xhr, errmsg, err) {
+              console.error("Error:", errmsg);
+            }
+          });
         });
     </script>
   </body>
