--- a/innovation_hub/webstore/templates/login.html
+++ b/innovation_hub/webstore/templates/login.html
@@ -46,8 +46,8 @@
             </form>
         </div>
         <div class="links">
-            <a href="#">Forgot Password ?</a> |
-            <a href="{% url 'webstore:register_user' %}">Don't have an account? <span> Register</span></a>
+            <a href="#" style="text-decoration: none; color: gray;">Forgot Password ?</a> |
+            <a href="{% url 'webstore:register_user' %}" style="text-decoration: none; color: gray;">Don't have an account? <span style="color: green;"> Register</span></a>
         </div>
     </main>
     <footer>
