--- a/innovation_hub/webstore/static/styles/login.css
+++ b/innovation_hub/webstore/static/styles/login.css
@@ -73,8 +73,10 @@ input{
     background-color: green;
 }
 #button:hover {
-    background-color: #1f4d91;
-    transition: 0.3s ease-in-out
+    background-color: white;
+    transition: 0.3s ease-in-out;
+    color: green;
+    box-shadow: 0px 4px 12px rgba(42, 93, 171, 0.5);
 }
 
 #remember-me {
