--- a/innovation_hub/webstore/static/styles/main.css
+++ b/innovation_hub/webstore/static/styles/main.css
@@ -49,7 +49,14 @@
     padding-bottom: 8px; */
     color: #5ba515;
 }
-
+/* Cart total */
+#cart-total-icon {
+    color: green;
+    background-color: white;
+    font-size: 12px;
+    padding: 5px 10px;
+    border-radius: 50px;
+}
 
 /* news-letter */
 .news-letter {
