--- a/innovation_hub/webstore/templates/layout.html
+++ b/innovation_hub/webstore/templates/layout.html
@@ -17,6 +17,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- header -->
@@ -81,6 +83,30 @@
                 navbar.style.backgroundColor = "transparent";
             }
         });
+        $(document).on('click', '#add-to-cart', function(e) {
+		e.preventDefault();
+		let productId = $(this).val();
+
+		$.ajax({
+			type: 'POST',
+			url: '{% url 'cart_add' %}',
+			data: {
+				product_id: productId,
+				csrfmiddlewaretoken: '{{ csrf_token }}',
+				action: 'post'
+			},
+			success: function(json) {
+				console.log("Cart Quantity Updated:", json.qty);  // Debug the response
+
+				// Update cart quantity on screen
+                $('#cart_quantity').text(json.qty);
+				// document.getElementById('cart_quantity').textContent = json.qty;
+			},
+			error: function(xhr, errmsg, err) {
+				console.error("Error:", errmsg);
+			}
+		});
+	  });
     </script>
 </body>
 </html>
