--- a/innovation_hub/webstore/static/styles/login.css
+++ b/innovation_hub/webstore/static/styles/login.css
@@ -7,7 +7,7 @@ main {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin-top: 10px;
+    margin-top: 0px;
     background-image: url(/static/img/bgs/bg-grey-2.jpg);
     background-size: cover;
     background-position: center;
@@ -26,12 +26,12 @@ img {
 }
 .sign-in-block {
     background-color: rgba(255, 255, 255, 0.822);
-    height: 50%;
+    height: 600px;
     width: 500px;
     border-radius: 8px;
     border: 1px solid rgb(196, 189, 177);
     box-shadow: 0px 4px 12px rgba(42, 93, 171, 0.5);
-    padding: 50px 10px;
+    padding: 30px 10px;
 }
 .sign-in {
     text-align: center;
