--- a/innovation_hub/webstore/templates/cart.html
+++ b/innovation_hub/webstore/templates/cart.html
@@ -24,7 +24,7 @@
                             {% for product in cart_products %}
                                 <tr class="cart-tb-rw">
                                     <td>{{ product.id }}</td>
-                                    <td><img src="{{ product.image.url }}" alt="" width="50px"></td>
+                                    <td><img src="{{ product.image.url }}" alt="" width="50px" height="60px"></td>
                                     <td>{{ product.name }}</td>
                                     <td>{{ product.price }}</td>
                                     <td>1</td>
