--- a/innovation_hub/webstore/static/styles/cart.css
+++ b/innovation_hub/webstore/static/styles/cart.css
@@ -3,6 +3,7 @@
     margin-left: 10px;
     margin-right: 30px;
     border-collapse: collapse;
+    text-align: center;
 }
 .cart-items,
 .cart-summary {
@@ -14,7 +15,7 @@ table {
 }
 td {
     border: 1.5px solid lightgray;
-    padding: 20px 20px;
+    padding: 15px 10px;
 }
 .cart-info-hdr th,
 .cart-summary-tb th {
