--- a/innovation_hub/webstore/templates/header.html
+++ b/innovation_hub/webstore/templates/header.html
@@ -1,4 +1,5 @@
-    <!-- header -->
+    {% load static %}
+	<!-- header -->
 	<div class="top-header-area" id="sticker">
 		<div class="container">
 			<div class="row">
@@ -6,8 +7,8 @@
 					<div class="main-menu-wrap">
 						<!-- logo -->
 						<div class="site-logo">
-							<a href="index.html">
-								<img src="static/img/logo.png" alt="logo" width="100px">
+							<a href="{% url 'webstore:home' %}">
+								<img src="{% static 'img/logo.png' %}" alt="logo" width="100px">
 							</a>
 						</div>
 						<!-- logo -->
