--- a/innovation_hub/webstore/templates/checkout.html
+++ b/innovation_hub/webstore/templates/checkout.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Check Out</title>
-    <link rel="stylesheet" href="/static/styles/main.css">
-    <link rel="stylesheet" href="/static/styles/all.css">
-    <link rel="stylesheet" href="/static/styles/checkout.css">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-</head>
-<body>
+<!-- templates layout.html -->
+{% extends 'layout.html' %}
+{% block title %} Cart - Innovation Hub {% endblock %}
+{% block page_head %}
+    <p class="subtitle">THANK YOU FOR CHOOSING</p>
+    <h1>Checkout</h1>
+{% endblock %}
+{% block page_content %}
     <!-- extends from other products -->
     <div class="check-out-section">
         <div class="container">
@@ -65,5 +59,4 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
